Clock Shifting Fix

--- a/src/Sass/Clock.scss
+++ b/src/Sass/Clock.scss
@@ -29,7 +29,11 @@
         position: relative;
         height: 5.5rem;
         letter-spacing: 0rem;
-        white-space: pre;
+        font-variant-numeric: tabular-nums!important;
+
+        span {
+            display: inline-block!important;
+        }
     }
 
     h4 {
@@ -74,14 +78,37 @@
     }
 }
 
-@media(max-width: 375px) {
+@media(min-width: 287px) {
     .clock-body-inner-container {
         h3 {
-            margin-top: 12vw!important;
-            font-size: 20vw!important;
+            margin-top: 14vw!important;
+            font-size: 4rem!important;
+
+            span {
+                display: inline-block;
+                width: 4.75rem!important;
+            }
         }
         h4 {
-            margin-top: -2vw!important;
+            margin-top: -7vw!important;
+            font-size: 0.75rem!important;
+        }
+    }
+}
+
+@media(min-width: 375px) {
+    .clock-body-inner-container {
+        h3 {
+            margin-top: 11vw!important;
+            font-size: 5.25rem!important;
+
+            span {
+                display: inline-block;
+                width: 6.2rem!important;
+            }
+        }
+        h4 {
+            margin-top: 2vw!important;
             font-size: 0.75rem!important;
         }
     }
@@ -92,6 +119,11 @@
         h3 {
             margin-top: 3rem!important;
             font-size: 7rem!important;
+
+            span {
+                display: inline-block;
+                width: 8rem!important;
+            }
         }
         h4 {
             margin-top: 3rem!important;
@@ -105,6 +137,10 @@
         h3 {
             margin-top: 3rem!important;
             font-size: 9rem!important;
+
+            span {
+                width: 10.5rem!important;
+            }
         }
         h4 {
             margin-top: 6rem!important;
@@ -123,6 +159,10 @@
         h3 {
             margin-top: 3.25rem!important;
             font-size: 6.25rem!important;
+
+            span {
+                width: 7.25rem!important;
+            }
         }
         h4 {
             margin-top: 2.25rem!important;
@@ -136,6 +176,10 @@
         h3 {
             margin-top: 3.5rem!important;
             font-size: 7.25rem!important;
+
+            span {
+                width: 8.5rem!important;
+            }
         }
         h4 {
             margin-top: 3.5rem!important;
@@ -172,6 +216,10 @@
         h3 {
             margin-top: 3rem!important;
             font-size: 6.5rem!important;
+
+            span {
+                width: 7.75rem!important;
+            }
         }
         h4 {
             margin-top: 2.5rem!important;
